--- a/site-files/index.html
+++ b/site-files/index.html
@@ -34,6 +34,8 @@
 <dl>
     <dt><a href="synth/">Modular Synth</a></dt>
     <dd>Designs for <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> synthesizer modules</dd>
+    <dt><a href="projects/asentry/">asentry</a></dt>
+    <dd>Device to monitor the <a href="https://cneos.jpl.nasa.gov/sentry/">JPL Sentry</a> database for asteroid impact threats. Just in case, you know?</dd>
     <dt><a href="https://github.com/Len42/OpAmpTester/#readme-ov-file">Op Amp Tester</a></dt>
     <dd>Tests op amp chips to verify that they are working</dd>
 </dl>
@@ -61,7 +63,7 @@
 <h2>Software Utilities</h2>
 <dl>
     <dt><a href="https://github.com/Len42/asentry/#readme-ov-file">asentry</a></dt>
-    <dd>Monitor the <a href="https://cneos.jpl.nasa.gov/sentry/">JPL Sentry</a> database for asteroid impact threats. Just in case, you know?</dd>
+    <dd>Program to monitor the <a href="https://cneos.jpl.nasa.gov/sentry/">JPL Sentry</a> database for asteroid impact threats.</dd>
     <dt><a href="https://github.com/Len42/NetToBOM/#readme-ov-file">NetToBOM</a></dt>
     <dd>This is my <a href="https://www.kicad.org/">KiCad</a> BOM plug-in. There are many like it but this one is mine.</dd>
     <dt>MakeVersionInfo</dt>
