--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -33,19 +33,27 @@
 <a href="https://www.raspberrypi.com/documentation/microcontrollers/raspberry-pi-pico.html#raspberry-pi-pico-w-and-pico-wh">Raspberry Pi Pico W</a>
 and <a href="https://circuitpython.org/">CircuitPython</a>
 to make a device that monitors NASA JPL’s
-<a href="https://cneos.jpl.nasa.gov/sentry/">Sentry</a> web service
+<a href="https://cneos.jpl.nasa.gov/sentry/">Sentry web service</a>
 and warns of potential Earth-threatening asteroids. This is a description of how it’s made.
 Know when to panic! <no-wrap>🌎🌠😱</no-wrap></p>
 
 <p>Source code and design files for this project are available <a href="https://github.com/Len42/asentry-gadget">on GitHub.</a></p>
 
-<p>This device is based on <a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython">a project by Jeff Epler.</a></p>
+<p>This device is based on <a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython">this project</a> by
+<a href="https://github.com/jepler">Jeff Epler.</a></p>
+
+<aside><p>If you want to get asteroid alerts on your computer instead of making a stand-alone device, <a href="https://github.com/Len42/asentry">there’s a Python program for that.</a></p></aside>
+
+<h2>Operation</h2>
+<p>Periodically, an HTTP request is sent over wifi to the Sentry web service to query for the asteroids with the highest threat levels. Typically 6 or 7 objects are returned. This list is compared to the results from the <em>previous</em> request.</p>
+
+<p>If the new results have any objects that did not appear in the previous results, or if the threat level of any of the objects has increased since the previous request, then an alert message is displayed on the OLED display and an alert sound is played. The device then waits for the pushbutton to be pressed, to make sure that the alert is seen.</p>
+
+<p>If no new threats are found, “No new threats” is displayed for a few seconds, then the device waits for an hour before querying the Sentry service again. If the pushbutton is pressed, it will stop waiting and do the next check immediately.</p>
 
 <h2>The Sentry System</h2>
 <p><a href="https://www.jpl.nasa.gov/">NASA's Jet Propulsion Laboratory</a> operates the
 <a href="https://cneos.jpl.nasa.gov/sentry/">Sentry system</a> which keeps track of Earth-approaching asteroids, predicts their orbits, and assigns each one a threat level indicating its impact risk.</p>
-
-<aside><p>If you want to get asteroid alerts on your computer instead of making a stand-alone device, <a href="https://github.com/Len42/asentry">there’s a Python program for that.</a></p></aside>
 
 <p>The Sentry system provides a web API to query its database and return results in JSON format. This device uses that to get information about the asteroids that are most likely to hit the Earth.</p>
 
@@ -67,7 +75,7 @@ hooks things together.</p>
 <g-col><a href="wiring2.jpg"><img src="wiring2.jpg" alt="wiring photo"></a></g-col>
 </g-row>
 
-<p>Note that special cables are required for the OLED display and the speaker. To connect the Pico W to the pushbutton and the I2S board, I’ve made cables using header connectors (which are way too long), but those wires can be soldered directly point-to-point.</p>
+<p>Note that special cables are required for the OLED display and the speaker. To connect the Pico W to the I2S board, I made a cable using header connectors, but those wires can be soldered directly point-to-point.</p>
 
 <p>The Pico W is stacked on top of the PiCowbell board using header connectors, as shown below.</p>
 <g-row>
@@ -89,7 +97,7 @@ hooks things together.</p>
 <p></p>CircuitPython must be installed on the Pico W, if it isn’t already.
 <a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython/installing-circuitpython">Click here for instructions.</a></p>
 
-<h2>Downloading the Code</h2>
+<h2><a name="download"></a>Downloading the Code</h2>
 <p>The CircuitPython program and associated libraries are
 <a href="https://github.com/Len42/asentry-gadget/tree/main/firmware">published on GitHub</a>
 and can also be <a href="https://github.com/Len42/asentry-gadget/releases/latest/download/firmware.zip">downloaded in a .zip file</a>.</p>
@@ -114,11 +122,12 @@ CIRCUITPY_WIFI_PASSWORD = "MyNetworkPassword"
 <h2>Code Details</h2>
 <p>The CircuitPython code running in this device is <a href="https://github.com/Len42/asentry-gadget/blob/main/firmware/code.py">over here on GitHub</a>.</p>
 
-<p>The <code>adafruit_requests</code> library is used to send HTTP requests to the Sentry web service. It also parses the JSON result data into a Python dictionary.</p>
+<p>The <a href="https://ssd-api.jpl.nasa.gov/doc/sentry.html">Sentry system's web API is documented here.</a></p>
 
-<p>TODO: API doc https://ssd-api.jpl.nasa.gov/doc/sentry.html</p>
+<p>Several CircuitPython libraries are used which are not included in the base CircuitPython distribution. These libraries are included in the firmware download (<a href="#download">see above</a>).</p>
 
-<p>TODO: Python code: </p>
+<p>Thanks to <a href="https://github.com/jepler">jepler</a> for the <code>WrappedTextDisplay</code> class, borrowed from
+<a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython/coding-the-text-generator">here.</a></p>
 
 <h1><a name="case"></a>Case</h1>
 <p>TODO</p>
