ennies instead of emmies

--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -117,7 +117,7 @@ CIRCUITPY_WIFI_PASSWORD = "MyNetworkPassword"
 
 <p><strong>Optional: </strong>If you copy an audio file named <kbd>alert.wav</kbd> to the <kbd>CIRCUITPY</kbd> drive, that sound will be played whenever an asteroid alert message is displayed. The <kbd>alert.wav</kbd> file should be a <em>brief</em> audio clip in WAV format.</p>
 
-<p>Once the device is set up and running, it no longer needs to be connected to a computer &mdash; it may be plugged into a USB power supply instead.</p>
+<p>Once the device is set up and running, it no longer needs to be connected to a computer &ndash; it may be plugged into a USB power supply instead.</p>
 
 <h2>Code Details</h2>
 <p>The CircuitPython code running in this device is <a href="https://github.com/Len42/asentry-gadget/blob/main/firmware/code.py">over here on GitHub</a>.</p>
