--- a/site-files/synth/dexy/hardware.html
+++ b/site-files/synth/dexy/hardware.html
@@ -94,7 +94,7 @@ Firmware and software are published under the <a href="https://github.com/Len42/
 <ul>
 <li><a href="https://oshpark.com/shared_projects/SqPinUsc">Main board</a></li>
 <li><a href="https://oshpark.com/shared_projects/VcDtCyfD">Controls board</a>
-    &mdash; <em>Note:</em> This version is missing the debouncing capacitors on the rotary encoder. The <a href="https://github.com/Len42/Dexy/tree/main/hardware">latest KiCad and Gerber files</a> are correct.</li>
+    &ndash; <em>Note:</em> This version is missing the debouncing capacitors on the rotary encoder. The <a href="https://github.com/Len42/Dexy/tree/main/hardware">latest KiCad and Gerber files</a> are correct.</li>
 <li><a href="https://oshpark.com/shared_projects/q5TKd42b">Front panel</a></li>
 </ul>
 
