--- a/site-files/synth/dexy/software.html
+++ b/site-files/synth/dexy/software.html
@@ -41,7 +41,7 @@
     <li>Download firmware to the module</li>
     <li>Display status and debugging messages from the module</li>
     </ul>
-<li>Live patch editing &mdash; When editing a patchbank that was uploaded from the Dexy module, changes to the currently-playing patch are heard immedately</li>
+<li>Live patch editing &ndash; When editing a patchbank that was uploaded from the Dexy module, changes to the currently-playing patch are heard immedately</li>
 </ul>
 
 <h1><a name="notes"></a>Notes</h1>
