--- a/site-files/dev/rp2040-adc-accuracy.html
+++ b/site-files/dev/rp2040-adc-accuracy.html
@@ -34,8 +34,8 @@
 
 <p>The RP2040 has a built-in ADC, which at first glance looks like it should be able to do the job:</p>
 <ul>
-<li>12-bit resolution &mdash; This gives 4096 distinguishable voltage values, which seems just about enough for good pitch tracking over 10 octaves (as long as <a href="https://www.facebook.com/JCollierMusic/videos/microtonal-games/1887701781318139/">Jacob Collier</a> isn’t listening).</li>
-<li>Up to 500,000 samples per second &mdash; I need to sample the pitch voltage a few thousand times per second, to allow audio-rate modulation, so this is plenty fast enough.</li>
+<li>12-bit resolution &ndash; This gives 4096 distinguishable voltage values, which seems just about enough for good pitch tracking over 10 octaves (as long as <a href="https://www.facebook.com/JCollierMusic/videos/microtonal-games/1887701781318139/">Jacob Collier</a> isn’t listening).</li>
+<li>Up to 500,000 samples per second &ndash; I need to sample the pitch voltage a few thousand times per second, to allow audio-rate modulation, so this is plenty fast enough.</li>
 </ul>
 
 <p>I would prefer to use this built-in ADC rather than a separate ADC chip.</p>
@@ -46,9 +46,9 @@
 <p>Another problem was that the ADC values jumped around quite a bit, even when the input voltage was steady. There seemed to be quite a bit of noise in either the input voltage or the ADC itself.</p>
 
 <h1><a name="fixes"></a>Fixes</h1>
-<p>The second problem &mdash; noisy ADC values &mdash; was simple to deal with. I added a simple lowpass RC filter on the input line to remove high-frequency noise. That didn’t completely eliminate the problem but it made a big improvement. I may also do some averaging in the firmware when it reads the ADC input, to smooth it out even more. One thing to keep in mind is that both of these techniques will reduce the input bandwidth as high frequencies are filtered out. For my design, I want to be able to handle frequencies up to “a few” kilohertz.</p>
+<p>The second problem &ndash; noisy ADC values &ndash; was simple to deal with. I added a simple lowpass RC filter on the input line to remove high-frequency noise. That didn’t completely eliminate the problem but it made a big improvement. I may also do some averaging in the firmware when it reads the ADC input, to smooth it out even more. One thing to keep in mind is that both of these techniques will reduce the input bandwidth as high frequencies are filtered out. For my design, I want to be able to handle frequencies up to “a few” kilohertz.</p>
 
-<p>The other problem &mdash; uneven pitch scaling &mdash; is caused by systematic inaccuracies in the RP2040’s ADC unit. It looked like this might force me to use an external ADC IC instead, unless I could find a way to even out the ADC response.</p>
+<p>The other problem &ndash; uneven pitch scaling &ndash; is caused by systematic inaccuracies in the RP2040’s ADC unit. It looked like this might force me to use an external ADC IC instead, unless I could find a way to even out the ADC response.</p>
 
 <p><a href="https://datasheets.raspberrypi.com/pico/pico-datasheet.pdf">The RP2040 datasheet</a> helpfully includes a graph of its ADC’s non-linearity:</p>
 
