--- a/site-files/synth/firmware-programming.html
+++ b/site-files/synth/firmware-programming.html
@@ -66,7 +66,7 @@ use an <a href="https://www.microchip.com/en-us/product/atmega328p">ATmega328P</
 
 <h1><a name="otherwise"></a>Other Methods</h1>
 <p>There are other ways to get the firmware onto the microcontroller chip. For example, you can program the firmware onto an Arduino-compatible dev board that has a removable ATmega328P chip
-(e.g. <a href="https://docs.arduino.cc/hardware/uno-rev3">Arduino UNO</a> or similar) then put the chip into your module. Or, you can program the Arduino bootloader onto the chip &mdash; there are various ways to do this &mdash; and then follow the procedure above.</p>
+(e.g. <a href="https://docs.arduino.cc/hardware/uno-rev3">Arduino UNO</a> or similar) then put the chip into your module. Or, you can program the Arduino bootloader onto the chip &ndash; there are various ways to do this &ndash; and then follow the procedure above.</p>
 
 For more information on how to program microcontrollers using the Arduino development environment, see the <a href="https://www.arduino.cc/">Arduino</a> web site.
 
