--- a/site-files/synth/grounding-plug.html
+++ b/site-files/synth/grounding-plug.html
@@ -34,7 +34,7 @@ It’s simply a 1/8" plug with the signal (tip contact) connected to ground (sle
 <a href="https://github.com/Len42/Synth/tree/main/modules/Bus-Driver#readme">driven</a> from a keyboard or DAW, and I have several modules with gate or volt-per-octave pitch inputs which are normalled to the system bus. This saves a lot of cabling in the type of patches I usually make.
 (Most Eurorack modules don’t take advantage of this feature, which is one reason why you probably don’t need this plug.)</p>
 
-<p>However, there are times when I want a module to <em>not</em> use the volt-per-octave pitch signal &mdash; for example, using a VCF as a fixed-frequency formant filter &mdash; so I need it to ignore the normalled signal from the bus. The usual way to do this is to plug a patch cable into the input and leave the other end of the cable hanging. That disconnects the normalled signal and leaves the input completely unconnected.</p>
+<p>However, there are times when I want a module to <em>not</em> use the volt-per-octave pitch signal &ndash; for example, using a VCF as a fixed-frequency formant filter &ndash; so I need it to ignore the normalled signal from the bus. The usual way to do this is to plug a patch cable into the input and leave the other end of the cable hanging. That disconnects the normalled signal and leaves the input completely unconnected.</p>
 
 <p>In theory, you’re not supposed to leave an input hanging like that because it could pick up noise. Hence, this grounding plug, which makes sure the unused input has a solid ground connection while being disconnected from the normalled signal. (In practice, I haven’t noticed any problem with unconnected Eurorack inputs, which is another reason why you don’t need this thing.)</p>
 
