--- a/site-files/synth/part-selection.html
+++ b/site-files/synth/part-selection.html
@@ -73,7 +73,7 @@ leakage are required. These are noted on the schematic.</p>
 
 <h2>Transistors</h2>
 <p>For bipolar transistors I use 2N3904 (NPN) and 2N3906 (PNP). Other
-general-purpose transistors can be used (e.g. BC548/558) but may require minor
+general-purpose transistors can be used (<i>e.g.</i> BC548/558) but may require minor
 circuit adjustments. If in doubt, test the circuit on a breadboard.</p>
 
 <h1><a name="opamps"></a>Op Amps</h1>
