--- a/site-files/synth/vco-calibration.html
+++ b/site-files/synth/vco-calibration.html
@@ -48,7 +48,7 @@
 <p>Three appropriate pitch control voltages and corresponding frequencies must be selected:</p>
 <ul>
 <li>Low note with 0V CV input, <i>e.g.</i> C0 (16.35 Hz) or A0 (27.5 Hz).</li>
-<li>Middle note with +5V CV input, <i>e.g.</i> C5 or A5. If the +5V is not precise (<i>e.g.</i> it’s from a voltage regulator) calculate the frequency corresponding to the actual measured voltage.</li>
+<li>Middle note with +5V CV input, <i>e.g.</i> C5 or A5. If the +5V is not precise (<i>i.e.</i> it’s from a voltage regulator rather than a proper pitch CV source), calculate the frequency corresponding to the actual measured voltage.</li>
 <li>High note with +10 CV input, <i>e.g.</i> C10 or A10. If the +10V is not precise, calculate the frequency corresponding to the actual measured voltage.</li>
 </ul>
 
