--- a/site-files/synth/dexy/firmware.html
+++ b/site-files/synth/dexy/firmware.html
@@ -64,7 +64,7 @@ must be changed (and of course the PCB layout must be modified).</p>
 
 <p>Core 1 runs the FM synthesis algorithm to generate audio output samples and sends the output to the DAC chip. Audio output is generated at a sample rate of 49152 Hz, clocked by a PWM timer interrupt.</p>
 
-<p>The firmware stores 32 preset patches. The rotary encoder is used to select which patch to play. There is no patch editing on the module - patches are editing using the <a href="software.html">DexyPatch software</a> and downloaded to the module. Downloaded patches are stored in flash memory so they are retained when the module is turned off. <em>Note:</em> Updating the firmware will replace the patches with a default set.</p>
+<p>The firmware stores 32 preset patches. The rotary encoder is used to select which patch to play. There is no patch editing on the module &ndash; patches are editing using the <a href="software.html">DexyPatch software</a> and downloaded to the module. Downloaded patches are stored in flash memory so they are retained when the module is turned off. <em>Note:</em> Updating the firmware will replace the patches with a default set.</p>
 
 <h1><a name="synthesis"></a>FM Synthesis</h1>
 <p>The FM synthesis is loosely based on the Yamaha DX7 voice architecture, but only a
