--- a/site-files/synth/dexy/index.html
+++ b/site-files/synth/dexy/index.html
@@ -50,7 +50,7 @@ Hardware and software are open source. GitHub repository is <a href="https://git
     <li>Timbre modulation</li>
     </ul>
 </li>
-<li>Gate and 1V/oct inputs can be normalled from the Eurorack bus (jumper-selectable) - more info <a href="../eurorack-bus-cv-gate.html">here</a></li>
+<li>Gate and 1V/oct inputs can be normalled from the Eurorack bus (jumper-selectable) &ndash; more info <a href="../eurorack-bus-cv-gate.html">here</a></li>
 <li>Attenutators on the modulation inputs</li>
 <li>Timbre control knob</li>
 <li>Rotary encoder and OLED display for patch selection and note animations</li>
