--- a/site-files/index.html
+++ b/site-files/index.html
@@ -27,14 +27,16 @@
 <p>I’m Len, and this is my web site.</p>
     
 <h1><a name="projects"></a>Projects</h1>
-<aside><img src="assets/synth-photo.jpg" alt="Modular synthesizer"></aside>
+<aside><a href="synth/"><img src="assets/synth-photo.jpg" alt="Modular synthesizer"></a></aside>
+<aside><a href="projects/asentry/"><img src="assets/asentry-photo.jpg" alt="asentry device"></a></aside>
+
 <p>I have published many of my software and hardware projects on <a href="https://github.com/Len42">GitHub</a>.</p>
 
 <h2>Recent Projects</h2>
 <dl>
     <dt><a href="synth/">Modular Synth</a></dt>
     <dd>Designs for <a href="https://en.wikipedia.org/wiki/Eurorack">Eurorack</a> synthesizer modules</dd>
-    <dt><a href="projects/asentry/">asentry</a></dt>
+    <dt><a href="projects/asentry/">asentry</a> 🌎🌠</dt>
     <dd>Device to monitor the <a href="https://cneos.jpl.nasa.gov/sentry/">JPL Sentry</a> database for asteroid impact threats. Just in case, you know?</dd>
     <dt><a href="https://github.com/Len42/OpAmpTester/#readme-ov-file">Op Amp Tester</a></dt>
     <dd>Tests op amp chips to verify that they are working</dd>
