--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -29,20 +29,21 @@
 <aside><a href="asentry.jpg"><img src="asentry.jpg" alt="asentry device"></a></aside>
 
 <h1><a name="overview"></a>Overview</h1>
+<p>Know when to panic! <no-wrap>🌎🌠😱</no-wrap></p>
+
 <p>I used a
 <a href="https://www.raspberrypi.com/documentation/microcontrollers/raspberry-pi-pico.html#raspberry-pi-pico-w-and-pico-wh">Raspberry Pi Pico W</a>
 and <a href="https://circuitpython.org/">CircuitPython</a>
 to make a device that monitors NASA JPL’s
 <a href="https://cneos.jpl.nasa.gov/sentry/">Sentry web service</a>
-and warns of potential Earth-threatening asteroids. This is a description of how it’s made.
-Know when to panic! <no-wrap>🌎🌠😱</no-wrap></p>
+and warns of potential Earth-threatening asteroids. This is a description of how it’s made.</p>
 
 <p>Source code and design files for this project are available <a href="https://github.com/Len42/asentry-gadget">on GitHub.</a></p>
 
-<p>This device is based on <a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython">this project</a> by
+<p>This device is <a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython">based on a project</a> by
 <a href="https://github.com/jepler">Jeff Epler.</a></p>
 
-<aside><p>If you want to get asteroid alerts on your computer instead of making a stand-alone device, <a href="https://github.com/Len42/asentry">there’s a Python program for that.</a></p></aside>
+<aside><p>If you want to get asteroid alerts on your computer instead of building a stand-alone device, <a href="https://github.com/Len42/asentry">there’s a Python program for that.</a></p></aside>
 
 <h2>Operation</h2>
 <p>Periodically, an HTTP request is sent over wifi to the Sentry web service to query for the asteroids with the highest threat levels. Typically 6 or 7 objects are returned. This list is compared to the results from the <em>previous</em> request.</p>
@@ -130,13 +131,16 @@ CIRCUITPY_WIFI_PASSWORD = "MyNetworkPassword"
 <a href="https://learn.adafruit.com/generating-text-with-chatgpt-pico-w-circuitpython/coding-the-text-generator">here.</a></p>
 
 <h1><a name="case"></a>Case</h1>
-<p>TODO</p>
-
 <p>I made a simple case out of heavy cardboard
 (<a href="https://www.amazon.ca/Grafix-CB121225-Chipboard-12-Inch-Natural/dp/B0013JRFUA?th=1">chipboard</a>),
 covered with with printed and painted decoration on
 <a href="https://www.avery.ca/en/avery-shipping-labels-with-trueblock-technology-for-laser-and-inkjet-printers-11inch-x-8-1-2inch-5265-rectangle-white.html">adhesive paper</a>,
 with <a href="https://www.amazon.ca/Swingline-SelfSeal-Adhesive-Laminating-3747308/dp/B00006IASA?th=1">clear adhesive lamination</a> for protection.</p>
+
+<g-row>
+<g-col><a href="case.jpg"><img src="case.jpg" alt="case"></a></g-col>
+<g-col><a href="guts.jpg"><img src="guts.jpg" alt="inside"></a></g-col>
+</g-row>
 
 </main>
 
