asentry project page - minor changes

--- a/site-files/projects/asentry/index.html
+++ b/site-files/projects/asentry/index.html
@@ -31,12 +31,11 @@
 <h1><a name="overview"></a>Overview</h1>
 <p>Know when to panic! <no-wrap>🌎🌠😱</no-wrap></p>
 
-<p>I used a
-<a href="https://www.raspberrypi.com/documentation/microcontrollers/raspberry-pi-pico.html#raspberry-pi-pico-w-and-pico-wh">Raspberry Pi Pico W</a>
-and <a href="https://circuitpython.org/">CircuitPython</a>
-to make a device that monitors NASA JPL’s
-<a href="https://cneos.jpl.nasa.gov/sentry/">Sentry web service</a>
-and warns of potential Earth-threatening asteroids. This is a description of how it’s made.</p>
+<p>I built a device to warn of potential Earth-threatening asteroids.
+It monitors NASA JPL’s <a href="https://cneos.jpl.nasa.gov/sentry/">Sentry web service</a>
+using a <a href="https://www.raspberrypi.com/documentation/microcontrollers/raspberry-pi-pico.html#raspberry-pi-pico-w-and-pico-wh">Raspberry Pi Pico W</a>
+and <a href="https://circuitpython.org/">CircuitPython</a>.
+This is a description of how it’s made.</p>
 
 <p>Source code and design files for this project are available <a href="https://github.com/Len42/asentry-gadget">on GitHub.</a></p>
 
